<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/view_register"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/tv_register"
            android:textAppearance="@style/TextTitleStyle"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_accountNumber"
                android:textAppearance="@style/TextNormalBlackStyle"/>

            <EditText
                android:id="@+id/edt_register_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:hint="@string/edt_hint_accountNumber"
                android:inputType="phone"
                android:textAppearance="@style/TextNormalBlackStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_password"
                android:textAppearance="@style/TextNormalBlackStyle"/>

            <EditText
                android:id="@+id/edt_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:hint="@string/edt_hint_password"
                android:inputType="textPassword"
                android:textAppearance="@style/TextNormalBlackStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_verify_code"
                android:textAppearance="@style/TextNormalBlackStyle"/>

            <EditText
                android:id="@+id/edt_register_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:hint="@string/edt_hint_verify_code"
                android:inputType="number"
                android:textAppearance="@style/TextNormalBlackStyle"/>

            <Button
                android:id="@+id/btn_send_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red_selector"
                android:text="@string/btn_send_verify_code"
                android:textAppearance="@style/TextSmallWhiteStyle"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_red_selector"
            android:gravity="center"
            android:text="@string/tv_register"
            android:textAppearance="@style/TextNormalWhiteStyle"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/btn_register"
            android:layout_below="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/tv_register_protocol_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_register_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_register_protocol"/>

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>