<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/view_login"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login_title"
                android:textAppearance="@style/TextTitleStyle"
                android:text="@string/tv_login"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/view_account_and_password"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:text="@string/tv_accountNumber"
                android:textAppearance="@style/TextNormalBlackStyle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_login_account"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:textAppearance="@style/TextNormalBlackStyle"
                android:inputType="phone"
                android:hint="@string/edt_hint_accountNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:text="@string/tv_password"
                android:textAppearance="@style/TextNormalBlackStyle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:id="@+id/edt_login_password"
                android:textAppearance="@style/TextNormalBlackStyle"
                android:inputType="textPassword"
                android:hint="@string/edt_hint_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textAppearance="@style/TextNormalWhiteStyle"
        android:background="@drawable/btn_red_selector"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/btn_register"
        android:gravity="center"
        android:text="@string/tv_register"
        android:textAppearance="@style/TextNormalBlackStyle"
        android:background="@drawable/btn_gray_selector"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>





</LinearLayout>